--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@astrojs/check": "^0.5.10",
     "@studio-freight/lenis": "^1.0.42",
     "astro": "^4.5.13",
+    "astro-i18next": "^1.0.0-beta.21",
     "astro-particles": "^2.10.0",
     "gsap": "^3.12.5",
-    "tsparticles": "2.9.3",
     "typescript": "^5.4.3"
   }
 }
