--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/mdx": "^2.3.0",
     "@studio-freight/lenis": "^1.0.42",
     "astro": "^4.5.13",
     "astro-i18next": "^1.0.0-beta.21",
