--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "astro-better-image-service": "^1.0.9",
     "astro-i18next": "^1.0.0-beta.21",
     "astro-lazy-youtube-embed": "^0.4.0",
-    "astro-particles": "^2.10.0",
     "gsap": "^3.12.5",
+    "sharp": "^0.33.3",
     "simplelightbox": "^2.14.3",
     "typescript": "^5.4.3"
   }
