--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@studio-freight/lenis": "^1.0.42",
     "astro": "^4.5.13",
     "astro-better-image-service": "^1.0.9",
-    "astro-embed": "^0.7.1",
     "astro-i18next": "^1.0.0-beta.21",
     "gsap": "^3.12.5",
+    "medium-zoom": "^1.1.0",
     "sharp": "^0.33.3",
     "simplelightbox": "^2.14.3",
     "typescript": "^5.4.3"
