--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "sharp": "^0.33.3",
     "simplelightbox": "^2.14.3",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "sass": "^1.76.0"
   }
 }
