--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.3.0",
+    "@astrojs/react": "^3.3.4",
+    "@astrojs/tailwind": "^5.1.0",
     "@studio-freight/lenis": "^1.0.42",
-    "astro": "^4.7.0",
+    "astro": "^4.8.4",
     "astro-better-image-service": "^1.0.9",
     "astro-i18next": "^1.0.0-beta.21",
     "gsap": "^3.12.5",
