--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.3.0",
     "@astrojs/react": "^3.3.4",
     "@astrojs/tailwind": "^5.1.0",
+    "@lottiefiles/dotlottie-web": "^0.22.0",
     "@studio-freight/lenis": "^1.0.42",
     "astro": "^4.8.4",
     "astro-better-image-service": "^1.0.9",
